featureflag/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: featureflag
  namespace: featureflag
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
    - host: featureflag-deneme
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: featureflag
                port:
                  number: 80
  
tls:
  - hosts:
    - featureflag-deneme
    secretName: featureflag-ingress-secret
